push final clean code

--- a/Data Engineering/process_reviews_data.ipynb
+++ b/Data Engineering/process_reviews_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-08 23:10:01,334 - INFO - Found credentials in environment variables.\n"
+     ]
+    }
+   ],
    "source": [
     "# boto3 will initialize connection using environment variables\n",
     "s3 = boto3.resource('s3')"
@@ -52,9 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['raw/reviews/albany-reviews.csv.gz',\n",
+       " 'raw/reviews/chicago-reviews.csv.gz',\n",
+       " 'raw/reviews/los-angeles-reviews.csv.gz',\n",
+       " 'raw/reviews/new-york-city-reviews.csv.gz',\n",
+       " 'raw/reviews/san-francisco-reviews.csv.gz',\n",
+       " 'raw/reviews/seattle-reviews.csv.gz',\n",
+       " 'raw/reviews/washington-dc-reviews.csv.gz']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def list_files_in_folder(bucket_name, folder_prefix):\n",
     "    s3 = boto3.resource('s3')\n",
@@ -73,54 +98,6 @@
     "folder_prefix = 'raw/reviews/'  # Specify the folder prefix\n",
     "items = list_files_in_folder(bucket_name, folder_prefix)\n",
     "items"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### View data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s3_path = items[0]\n",
-    "s3_base_url = f's3://{bucket_name}/'\n",
-    "\n",
-    "date_columns = ['date']\n",
-    "\n",
-    "df_sample = pd.read_csv(s3_base_url+ s3_path, compression='gzip', parse_dates=date_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sample.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sample.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sample.info()"
    ]
   },
   {
