--- a/Exploratory Data Analysis/exploritory_data_analysis.ipynb
+++ b/Exploratory Data Analysis/exploritory_data_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,150 +33,51 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "# enable pandas to display up to 500 columns\n",
-    "pd.set_option('display.max_columns', 500)"
+    "pd.set_option('display.max_columns', 500)\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Get the current working directory\n",
+    "current_directory = os.getcwd()\n",
+    "\n",
+    "# Add the parent directory to sys.path\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_directory, '..')))\n",
+    "\n",
+    "# Import the helper_functions module\n",
+    "from helper_functions import connect_to_snowflake, get_data, write_to_snowflake"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1 Load Snowflake credentials for temp user"
+    "## 1.1 Import Data\n",
+    "#### 1.1 Connect to Snowflake using schema ODS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load environment variables from a .env file\n",
-    "load_dotenv()\n",
-    "\n",
-    "try:\n",
-    "    TEMP_USER = os.getenv('SNOWSQL_TEMP_USER')\n",
-    "    TEMP_USER_PASSWORD = os.getenv('SNOWSQL_TEMP_PWD')\n",
-    "    \n",
-    "    if not TEMP_USER:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_USER must be set\")\n",
-    "    if not TEMP_USER_PASSWORD:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_PWD must be set\")\n",
-    "\n",
-    "except ValueError as ve:\n",
-    "    print(f\"Error: {ve}\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"An unexpected error occurred: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2 Connect to Snowflake"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Snowflake successfully at 2024-07-26 14:2400\n"
+      "Successfully connected to Snowflake schema ODS\n"
      ]
     }
    ],
    "source": [
-    "# Establish connection to Snowflake\n",
-    "current_time = datetime.now().strftime('%Y-%m-%d %H:%M%S')\n",
-    "\n",
-    "try:\n",
-    "    conn = snowflake.connector.connect(\n",
-    "        user=TEMP_USER,\n",
-    "        password=TEMP_USER_PASSWORD,\n",
-    "        account='ygeuort-alb19263',\n",
-    "        warehouse='COMPUTE_WH',\n",
-    "        database='AIRBNB',\n",
-    "        schema='ODS'\n",
-    "    )\n",
-    "\n",
-    "    print(f'Connected to Snowflake successfully at {current_time}')\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f'Failed to connect to Snowflake on {current_time} due to error code {e}')"
+    "conn = connect_to_snowflake(schema_name='ODS')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Fetch data from Snowflake\n",
-    "\n",
-    "### Table Information\n",
-    "\n",
-    "The following tables exist in the ODS schema:\n",
-    "\n",
-    "**listings table**:  contains data on listings\n",
-    "- Number of rows:  111K.\n",
-    "- Date columns: 'last_scraped', 'host_since', 'calendar_last_scraped', 'first_review', 'last_review'\n",
-    "\n",
-    "**reviews table**:  contains reviews for listings\n",
-    "- Number of rows: 4.1M rows.\n",
-    "- Date columns: 'review_date'\n",
-    "\n",
-    "### Market Names\n",
-    "\n",
-    "Market names are stored under the column `market` for each table and markets are labeled as follows:\n",
-    "- albany\n",
-    "- chicago\n",
-    "- los-angeles\n",
-    "- new-york-city\n",
-    "- san-francisco\n",
-    "- seattle\n",
-    "- washington-dc\n",
-    "\n",
-    "#### 2.1 Function to fetch data from Snowflake"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data(sql_query, date_columns=None):\n",
-    "    \"\"\"\n",
-    "    Executes a SQL query and returns the result as a pandas DataFrame.\n",
-    "\n",
-    "    Args:\n",
-    "        sql_query (str): SQL query to execute.\n",
-    "\n",
-    "    Returns:\n",
-    "        df_result: Resulting DataFrame from the SQL query.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        cursor = conn.cursor()\n",
-    "        \n",
-    "        cursor.execute(sql_query)\n",
-    "\n",
-    "        # load data into dataframe\n",
-    "        df_result = cursor.fetch_pandas_all()\n",
-    "\n",
-    "        # Convert column names to lowercase\n",
-    "        df_result.columns = map(str.lower, df_result.columns)\n",
-    "\n",
-    "        # Parse specified date columns\n",
-    "        if date_columns:\n",
-    "            for col in date_columns:\n",
-    "                df_result[col] = pd.to_datetime(df_result[col], errors='coerce')\n",
-    "\n",
-    "    finally:\n",
-    "        if cursor is not None:\n",
-    "            cursor.close()\n",
-    "\n",
-    "    return df_result"
+    "## 2. Fetch data from Snowflake"
    ]
   },
   {
@@ -188,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +98,7 @@
        "(7707, 68)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +109,7 @@
     "where market = 'chicago'\n",
     " '''\n",
     "\n",
-    "df = get_data(sql_query)\n",
+    "df = get_data(sql_query, conn)\n",
     "df.shape"
    ]
   },
@@ -790,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +700,7 @@
        "(45570, 68)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +713,7 @@
     "where market = 'los-angeles'\n",
     " '''\n",
     "\n",
-    "df_raw = get_data(sql_query, date_columns=date_cols)\n",
+    "df_raw = get_data(sql_query, conn, date_columns=date_cols)\n",
     "df_raw.shape"
    ]
   },
@@ -1024,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
