--- a/train.ipynb
+++ b/train.ipynb
@@ -39,78 +39,43 @@
     "#import functions from helper_functions.py\n",
     "from helper_functions import get_data, write_to_snowflake\n",
     "# Enable pandas to display up to 500 columns\n",
-    "pd.set_option('display.max_columns', 500)\n"
+    "pd.set_option('display.max_columns', 500)\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Get the current working directory\n",
+    "current_directory = os.getcwd()\n",
+    "\n",
+    "# Add the parent directory to sys.path\n",
+    "sys.path.append(os.path.abspath(os.path.join(current_directory, '..')))\n",
+    "\n",
+    "# Import the helper_functions module\n",
+    "from helper_functions import connect_to_snowflake, get_data, write_to_snowflake"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1 Load Snowflake credentials for temp user"
+    "## 1. Connect to Snowflake using schema ODS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load environment variables from a .env file\n",
-    "load_dotenv()\n",
-    "\n",
-    "try:\n",
-    "    TEMP_USER = os.getenv('SNOWSQL_TEMP_USER')\n",
-    "    TEMP_USER_PASSWORD = os.getenv('SNOWSQL_TEMP_PWD')\n",
-    "    \n",
-    "    if not TEMP_USER:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_USER must be set\")\n",
-    "    if not TEMP_USER_PASSWORD:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_PWD must be set\")\n",
-    "\n",
-    "except ValueError as ve:\n",
-    "    print(f\"Error: {ve}\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"An unexpected error occurred: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2 Connect to Snowflake"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Snowflake successfully at 2024-07-30 20:0439\n"
+      "Successfully connected to Snowflake schema ODS\n"
      ]
     }
    ],
    "source": [
-    "# Establish connection to Snowflake\n",
-    "current_time = datetime.now().strftime('%Y-%m-%d %H:%M%S')\n",
-    "\n",
-    "try:\n",
-    "    conn = snowflake.connector.connect(\n",
-    "        user=TEMP_USER,\n",
-    "        password=TEMP_USER_PASSWORD,\n",
-    "        account='ygeuort-alb19263',\n",
-    "        warehouse='COMPUTE_WH',\n",
-    "        database='AIRBNB',\n",
-    "    )\n",
-    "\n",
-    "    print(f'Connected to Snowflake successfully at {current_time}')\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f'Failed to connect to Snowflake on {current_time} due to error code {e}')"
+    "conn = connect_to_snowflake(schema_name='ODS')"
    ]
   },
   {
@@ -122,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +96,7 @@
        "(111052, 68)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,25 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/samkobrin/Documents/GitHub/airbnb-pricing-dashboard/helper_functions.py:56: UserWarning: Pandas Dataframe has non-standard index of type <class 'pandas.core.indexes.numeric.Int64Index'> which will not be written. Consider changing the index to pd.RangeIndex(start=0,...,step=1) or call reset_index() to keep index as column(s)\n",
-      "  success, num_chunks, num_rows, output = write_pandas(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created table and data loaded to Snowflake at 2024-07-30 20:1936\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Select features and target for the model\n",
     "features = ['market', 'room_type', 'accommodates', 'bathrooms', 'beds', 'latitude', 'longitude', 'amenities']\n",
@@ -190,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,9 +155,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation MAE scores: [46.92844899 45.71262102 46.13681104 46.18273602 46.38888795 46.11667545\n",
+      " 46.19433292 46.97021873 46.64408421 46.03438575]\n",
+      "Average cross-validation MAE: 46.330920206389905\n",
+      "Cross-validation RMSE scores: [70.48089713 69.07791366 69.85507162 70.81930847 70.48595348 69.76894344\n",
+      " 69.36436791 71.07897349 71.5754946  69.38603469]\n",
+      "Average cross-validation RMSE: 70.1892958498672\n",
+      "Test set MAE: 46.16088187131708\n",
+      "Test set RMSE: 69.43573853209195\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Venv\\analytics\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['model/regression_pipeline.joblib']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get model run start time\n",
     "start_time = datetime.now()\n",
@@ -238,7 +220,7 @@
     "    pipeline = Pipeline(steps=[\n",
     "        ('preprocessor', preprocessor),\n",
     "        ('regressor', RandomForestRegressor(max_depth=30,\n",
-    "                                            max_features='auto',\n",
+    "                                            max_features=None,\n",
     "                                            min_samples_leaf=2,\n",
     "                                            min_samples_split=2,\n",
     "                                            n_estimators=300,\n",
@@ -325,6 +307,13 @@
     "# Save the model\n",
     "joblib.dump(pipeline, model_file, compress=('gzip', 9))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -343,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
