resolved merge conflicts in 1_price_prediction, requirements, and train

--- a/train.ipynb
+++ b/train.ipynb
@@ -63,38 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load environment variables from a .env file\n",
-    "load_dotenv()\n",
-    "\n",
-    "try:\n",
-    "    TEMP_USER = os.getenv('SNOWSQL_TEMP_USER')\n",
-    "    TEMP_USER_PASSWORD = os.getenv('SNOWSQL_TEMP_PWD')\n",
-    "    \n",
-    "    if not TEMP_USER:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_USER must be set\")\n",
-    "    if not TEMP_USER_PASSWORD:\n",
-    "        raise ValueError(\"Environment variable SNOWSQL_TEMP_PWD must be set\")\n",
-    "\n",
-    "except ValueError as ve:\n",
-    "    print(f\"Error: {ve}\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"An unexpected error occurred: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2 Connect to Snowflake"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -163,7 +131,10 @@
     "df = df[df[target] <= 600]\n",
     "\n",
     "# Drop rows with missing values in the target column to ensure data integrity\n",
-    "df = df.dropna(subset=[target])"
+    "df = df.dropna(subset=[target])\n",
+    "\n",
+    "# write cleaned data to snowflake feature store\n",
+    "write_to_snowflake(df,conn=conn, snowflake_schema_name='FEATURE_STORE', snowflake_table_name='listings_cleaned')"
    ]
   },
   {
